--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -146,7 +146,7 @@
     "release-homebrew": "gushio gushio/target-brew-release.js",
     "release-npm": "gushio gushio/target-npm-release.js",
     "run-plugin": "./bin/run session run-aws-credential-plugin",
-    "nightly": "gushio gushio/target-nightly.js",
+    "nightly": "gushio gushio/target-nightly.js"
   },
   "types": "dist/index.d.ts"
 }
