chore: added sonarqube and dependabot corrections

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,7 @@
     "@aws-sdk/client-sso": "^3.85.0",
     "@aws-sdk/client-sso-oidc": "^3.85.0",
     "@babel/plugin-proposal-decorators": "^7.16.5",
-    "@noovolari/leapp-core": "0.1.138",
+    "@noovolari/leapp-core": "file:../core",
     "@oclif/core": "2.1.4",
     "@oclif/plugin-help": "^5.1.12",
     "@types/inquirer": "8.2.0",
@@ -61,7 +61,7 @@
     "rimraf": "~3.0.2",
     "rxjs": "~6.6.7",
     "saml-encoder-decoder-js": "~1.0.1",
-    "semver": "~7.3.5",
+    "semver": "7.5.3",
     "standard-version": "^9.3.0",
     "sudo-prompt": "~9.2.1",
     "tar": "^6.1.11",
