--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -160,7 +160,7 @@
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
-    "@noovolari/leapp-core": "0.1.138",
+    "@noovolari/leapp-core": "file:../core",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
@@ -214,7 +214,7 @@
     "rimraf": "~3.0.2",
     "rxjs": "~6.6.7",
     "saml-encoder-decoder-js": "~1.0.1",
-    "semver": "~7.3.5",
+    "semver": "7.5.3",
     "standard-version": "^9.3.0",
     "stream-browserify": "3.0.0",
     "sudo-prompt": "~9.2.1",
