chore: removed strict null check from CLI tsconfig until new leapp-team-core update

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -9,7 +9,7 @@
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "noImplicitThis": true,
     "alwaysStrict": true,
     "noUnusedLocals": true,
