chore: re-introduced windows signing options in package.json

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -132,6 +132,10 @@
       "publisherName": "beSharp",
       "requestedExecutionLevel": "asInvoker",
       "verifyUpdateCodeSignature": false,
+      "signingHashAlgorithms": [
+        "sha256"
+      ],
+      "sign": "scripts/windows-sign.js",
       "target": [
         "nsis"
       ]
