--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -80,7 +80,7 @@ jobs:
           mv leapp-team ..
           cd ../leapp-team/packages/leapp-team-service
           npm run test
-          npm run enable-team-features
+          npm run enable-team-features-prod
 
       - name: Build Win desktop app
         shell: bash
@@ -136,7 +136,7 @@ jobs:
           mv leapp-team ..
           cd ../leapp-team/packages/leapp-team-service
           npm run test
-          npm run enable-team-features
+          npm run enable-team-features-prod
 
       - name: Build Linux desktop app
         run: |
@@ -182,7 +182,7 @@ jobs:
           mv leapp-team ..
           cd ../leapp-team/packages/leapp-team-service
           npm run test
-          npm run enable-team-features
+          npm run enable-team-features-prod
 
       - name: Build macOS x64 desktop app
         uses: nick-fields/retry@v2
@@ -267,7 +267,7 @@ jobs:
           mv leapp-team ..
           cd ../leapp-team/packages/leapp-team-service
           npm run test
-          npm run enable-team-features
+          npm run enable-team-features-prod
 
       - name: Build macOS arm64 desktop app
         uses: nick-fields/retry@v2
