chore: fixed enable-team-features in pipelines with the proper environment

--- a/.github/workflows/cli-ci-cd.yml
+++ b/.github/workflows/cli-ci-cd.yml
@@ -39,8 +39,9 @@ jobs:
         run: |
           mv leapp-team ..
           cd ../leapp-team/packages/leapp-team-service
+          npm install
           npm run test
-          npm run enable-team-features
+          npm run enable-team-features-prod
       - name: Bootstrap
         run: |
           npm run bootstrap
