--- a/.github/workflows/cli-ci-cd.yml
+++ b/.github/workflows/cli-ci-cd.yml
@@ -38,7 +38,9 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
           mv leapp-team ..
-          cd ../leapp-team/packages/leapp-team-service
+          cd ../leapp-team/packages/leapp-team-core
+          npm run bootstrap
+          cd ../leapp-team-service
           npm install
           npm run test
           npm run enable-team-features-prod
