chore: added core build before team-service tests

--- a/.github/workflows/cli-ci-cd.yml
+++ b/.github/workflows/cli-ci-cd.yml
@@ -37,6 +37,10 @@ jobs:
       - name: Inject Team Feature
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
+          cd packages/leapp-core
+          npm run install
+          npm run build
+          cd ../..
           mv leapp-team ..
           cd ../leapp-team/packages/leapp-team-core
           npm run bootstrap
