--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Inject Team Feature
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
-          cd packages/leapp-core
+          cd packages/core
           npm run install
           npm run build
           cd ../..
@@ -140,7 +140,7 @@ jobs:
       - name: Inject Team Feature
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
-          cd packages/leapp-core
+          cd packages/core
           npm run install
           npm run build
           cd ../..
@@ -193,7 +193,7 @@ jobs:
       - name: Inject Team Feature
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
-          cd packages/leapp-core
+          cd packages/core
           npm run install
           npm run build
           cd ../..
@@ -285,7 +285,7 @@ jobs:
       - name: Inject Team Feature
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
-          cd packages/leapp-core
+          cd packages/core
           npm run install
           npm run build
           cd ../..
