--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -78,7 +78,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
           cd packages/core
-          npm run install
+          npm install
           npm run build
           cd ../..
           mv leapp-team ..
@@ -141,7 +141,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
           cd packages/core
-          npm run install
+          npm install
           npm run build
           cd ../..
           mv leapp-team ..
@@ -194,7 +194,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
           cd packages/core
-          npm run install
+          npm install
           npm run build
           cd ../..
           mv leapp-team ..
@@ -286,7 +286,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
           cd packages/core
-          npm run install
+          npm install
           npm run build
           cd ../..
           mv leapp-team ..
