--- a/.github/workflows/desktop-app-nightly-cd.yml
+++ b/.github/workflows/desktop-app-nightly-cd.yml
@@ -149,8 +149,7 @@ jobs:
           rm -Rf ./release/builder-debug.yml
           rm -Rf ./release/builder-effective-config.yaml
 
-          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
-          TAG_VERSION=${TAG_VERSION:1}
+          TAG_VERSION=$(cat nightly-version)
           zip "./release/Leapp-deb.zip" "./release/Leapp_$TAG_VERSION_amd64.deb"
           zip "./release/Leapp-appImage.zip" "./release/Leapp-$TAG_VERSION.AppImage"
 
