chore: fixed nightly build

--- a/.github/workflows/desktop-app-nightly-cd.yml
+++ b/.github/workflows/desktop-app-nightly-cd.yml
@@ -37,6 +37,8 @@ jobs:
     needs: [ clean-nightly-latest ]
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: develop-pro
       - name: Build and release core (nightly)
         run: |
           cd packages/core
@@ -64,6 +66,8 @@ jobs:
           git config --global core.eol lf
 
       - uses: actions/checkout@v3
+        with:
+          ref: develop-pro
 
       - uses: actions/checkout@v3
         if: ${{ env.TEAM_REPOSITORY != '' }}
@@ -115,6 +119,8 @@ jobs:
     needs: [ build-and-release-core-and-cli ]
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: develop-pro
       - uses: actions/checkout@v3
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
@@ -159,6 +165,8 @@ jobs:
     needs: [ build-and-release-core-and-cli ]
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: develop-pro
 
       - uses: actions/checkout@v3
         if: ${{ env.TEAM_REPOSITORY != '' }}
@@ -242,6 +250,8 @@ jobs:
     needs: [ build-and-release-core-and-cli, build-macos-x64 ]
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: develop-pro
 
       - uses: actions/checkout@v3
         if: ${{ env.TEAM_REPOSITORY != '' }}
