--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -12,8 +12,8 @@
     "strictNullChecks": false,
     "noImplicitThis": true,
     "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "inlineSourceMap": true,
@@ -38,7 +38,7 @@
       "*": [
         "node_modules/*"
       ]
-    }
+    },
   },
   "include": [
     "src/**/*"
