--- a/.github/workflows/desktop-app-nightly-cd.yml
+++ b/.github/workflows/desktop-app-nightly-cd.yml
@@ -46,6 +46,64 @@ jobs:
           npm install
           npm run nightly
 
+  build-win:
+    runs-on: windows-2022
+    needs: [ build-and-release-core-and-cli ]
+    steps:
+      - name: Prepare GIT
+        shell: bash
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
+      - uses: actions/checkout@v3
+
+
+      - uses: actions/checkout@v3
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        with:
+          repository: ${{ env.TEAM_REPOSITORY }}
+          ref: development
+          token: ${{ secrets.GH_TOKEN }}
+          path: leapp-team
+      - name: Inject Team Feature
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        run: |
+          mv leapp-team ..
+          cd ../leapp-team/packages/leapp-team-service
+          npm run enable-team-features-dev
+
+      - name: Build Win desktop app (nightly)
+        shell: bash
+        run: |
+          cd packages/desktop-app
+          npm install
+          npm run nightly-win
+          rm -Rf ./release/win-unpacked
+          rm -Rf ./release/.cache
+          rm -Rf ./release/builder-debug.yml
+          rm -Rf ./release/builder-effective-config.yaml
+
+          TAG_VERSION=$(cat nightly-version)
+          rm "./release/Leapp-$TAG_VERSION-win.zip" ||:
+          powershell "Compress-Archive './release/Leapp Setup $TAG_VERSION.exe' './release/Leapp-$TAG_VERSION-win.zip'"
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+
+      - name: Release draft to S3 (nightly)
+        shell: bash
+        run: |
+          cd packages/desktop-app
+
+          TAG_VERSION=$(cat nightly-version)
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/" --recursive
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/latest-temp/" --recursive
+
   build-macos-arm:
     runs-on: macos-latest
     needs: [ build-and-release-core-and-cli ]
@@ -132,7 +190,7 @@ jobs:
 
   publish-nightly-draft:
     runs-on: ubuntu-latest
-    needs: [ build-macos-arm ]
+    needs: [ build-macos-arm, build-win ]
     steps:
 
       - name: Configure AWS credentials
