--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -286,7 +286,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: main
+          ref: main/26c281200defa1e3ac1d584ab9287c985f4659c3
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
       - name: Inject Team Feature
