chore: reverted package.json

--- a/.github/workflows/desktop-app-cd.yml
+++ b/.github/workflows/desktop-app-cd.yml
@@ -71,7 +71,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: main/26c2812
+          ref: 26c2812
           fetch-depth: 0
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
@@ -136,7 +136,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: main/26c2812
+          ref: 26c2812
           fetch-depth: 0
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
@@ -195,7 +195,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: main/26c2812
+          ref: 26c2812
           fetch-depth: 0
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
@@ -289,7 +289,7 @@ jobs:
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: main/26c2812
+          ref: 26c2812
           fetch-depth: 0
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
