--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,14 @@ nav:
       - 'Introduction to Plugins': 'plugins/plugins-introduction.md'
       - 'Developer Reference': 'plugins/plugins-development.md'
   - 'General Options': 'built-in-features/general-options.md'
+  - 'Leapp PRO':
+      - 'Getting Started':
+          - 'Getting Started': 'leapp-pro/getting-started/index.md'
+          - 'Sign-up': 'leapp-pro/getting-started/sign-up.md'
+          - 'Sign-in': 'leapp-pro/getting-started/sign-in.md'
+          - 'Lock your Workspace': 'leapp-pro/getting-started/lock.md'
+      - 'Synchronization': 'leapp-pro/synchronization.md'
+      - 'Security and password': 'leapp-pro/security-and-password.md'
   - 'Roadmap': https://roadmap.leapp.cloud/tabs/4-in-progress
   - Contributing:
       - 'Get involved': 'contributing/get-involved.md'
