--- a/.github/workflows/desktop-app-cd-nightly-approval.yml
+++ b/.github/workflows/desktop-app-cd-nightly-approval.yml
@@ -28,24 +28,8 @@ jobs:
           IDENTIFIER=$(date +%Y%m%d%H%M%S)
           echo "::set-output name=BUILD_IDENTIFIER::$IDENTIFIER"
 
-  clean-nightly-latest:
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: Move draft to nightly latest
-        run: |
-          aws s3 rm "${{ env.S3_BUCKET }}/nightly/latest-temp" --recursive
-
   build-and-release-core-and-cli:
     runs-on: ubuntu-latest
-    needs: [ clean-nightly-latest ]
     steps:
       - uses: actions/checkout@v3
 
@@ -67,7 +51,7 @@ jobs:
 
   build-macos-arm:
     runs-on: macos-latest
-    needs: [ build-and-release-core-and-cli, build-macos-x64, generate-build-identifier ]
+    needs: [ build-and-release-core-and-cli, generate-build-identifier ]
     steps:
       - uses: actions/checkout@v3
 
