--- a/.github/workflows/desktop-app-cd-nightly-approval.yml
+++ b/.github/workflows/desktop-app-cd-nightly-approval.yml
@@ -132,9 +132,7 @@ jobs:
           TAG_VERSION=$(cat nightly-version)
           BUILD_IDENTIFIER=${{ needs.generate-build-identifier.outputs.build-identifier }}
           aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/${BUILD_IDENTIFIER}/" --recursive
-          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
           PRESIGN_URL=$(aws s3 presign "${{ env.S3_BUCKET }}/nightly/${BUILD_IDENTIFIER}/Leapp-${TAG_VERSION}-arm64.dmg")
-          unset AWS_ACCESS_KEY_ID
-          unset AWS_SECRET_ACCESS_KEY
-          echo "Leapp-${TAG_VERSION}-arm64.dmg: ${PRESIGN_URL}"
+          echo "${ PRESIGN_URL }" > presign_url.txt
+          aws s3 cp presign_url.txt "${{ env.S3_BUCKET }}/nightly/${BUILD_IDENTIFIER}/"
+          rm presign_url.txt
