--- a/.github/workflows/desktop-app-cd-nightly-approval.yml
+++ b/.github/workflows/desktop-app-cd-nightly-approval.yml
@@ -53,6 +53,8 @@ jobs:
     runs-on: macos-latest
     needs: [ build-and-release-core-and-cli, generate-build-identifier ]
     steps:
+      - uses: actions/checkout@v3
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
