--- a/.github/workflows/desktop-app-cd-nightly-approval.yml
+++ b/.github/workflows/desktop-app-cd-nightly-approval.yml
@@ -55,6 +55,70 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: actions/checkout@v3
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        with:
+          repository: ${{ env.TEAM_REPOSITORY }}
+          ref: development
+          token: ${{ secrets.GH_TOKEN }}
+          path: leapp-team
+      - name: Inject Team Feature
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        run: |
+          mv leapp-team ..
+          cd ../leapp-team/packages/leapp-team-service
+          npm run enable-team-features-dev
+
+      - name: Build macOS arm64 desktop app (nightly)
+        uses: nick-fields/retry@v2
+        env:
+          APPLE_NOTARISATION_PASSWORD: ${{ secrets.APPLE_NOTARISATION_PASSWORD }}
+        with:
+          timeout_minutes: 20
+          max_attempts: 5
+          command: |
+            cd packages/desktop-app
+            KEY_CHAIN=build.keychain
+            CERTIFICATE_P12=certificate.p12
+            CERTIFICATE_APPLICATION_P12=certificate-application.p12
+            echo "Recreate the certificate from the secure environment variable"
+            echo "security create-keychain"
+            echo "${{ env.CERTIFICATE_OSX_P12 }}" | base64 --decode > $CERTIFICATE_P12
+            echo "${{ env.CERTIFICATE_APPLICATION_OSX_P12 }}" | base64 --decode > $CERTIFICATE_APPLICATION_P12
+            security create-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
+            echo "security list-keychains"
+            security list-keychains -s login.keychain build.keychain
+            echo "security default-keychain"
+            security default-keychain -s $KEY_CHAIN
+            echo "security unlock-keychain"
+            security unlock-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
+            echo "security import"
+            security import $CERTIFICATE_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
+            security import $CERTIFICATE_APPLICATION_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
+            echo "security find-identity"
+            security find-identity -v
+            echo "security set-key-partition-list"
+            security set-key-partition-list -S apple-tool:,apple:,codesign:, -s -k ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
+            rm -fr *.p12
+
+            npm install
+            npm run set-target-arm64
+            npm run nightly
+
+      - name: Clean build
+        run: |
+          cd packages/desktop-app
+          rm -Rf ./release/mac
+          rm -Rf ./release/mac-unpacked
+          rm -Rf ./release/.cache
+          rm -Rf ./release/builder-debug.yml
+          rm -Rf ./release/builder-effective-config.yaml
+          rm -Rf ./release/mac-arm64
+          TAG_VERSION=$(cat nightly-version)
+          rm "./release/Leapp-$TAG_VERSION-arm64-mac.zip"
+          rm "./release/Leapp-$TAG_VERSION-arm64-mac.zip.blockmap"
+          zip "./release/Leapp-$TAG_VERSION-mac-arm64.zip" "./release/Leapp-$TAG_VERSION-arm64.dmg"
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -62,15 +126,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
 
-      - name: Release draft to S3 (nightly)
+      - name: prepare tag version for artifact upload
         id: release
         run: |
           cd packages/desktop-app
-          TAG_VERSION=0.19.0
-          BUILD_IDENTIFIER=20230912161922
-          PRESIGN_URL=$(aws s3 presign "${{ env.S3_BUCKET }}/nightly/${BUILD_IDENTIFIER}/Leapp-${TAG_VERSION}-arm64.dmg")
-          echo "${PRESIGN_URL}" > presign_url.txt
-          cat presign_url.txt
+          TAG_VERSION=$(cat nightly-version)
           echo "::set-output name=TAG_VERSION::$TAG_VERSION"
 
       - name: Upload artifacts
