--- a/.github/workflows/desktop-app-cd-nightly-approval.yml
+++ b/.github/workflows/desktop-app-cd-nightly-approval.yml
@@ -115,7 +115,7 @@ jobs:
 
   build-linux:
     runs-on: ubuntu-latest
-    needs: [ build-and-release-core-and-cli ]
+    needs: [ build-and-release-core-and-cli, generate-build-identifier ]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -173,7 +173,7 @@ jobs:
 
   build-macos-x64:
     runs-on: macos-latest
-    needs: [ build-and-release-core-and-cli ]
+    needs: [ build-and-release-core-and-cli, generate-build-identifier ]
     steps:
       - uses: actions/checkout@v3
         with:
